# deskflow

./: .gitignore  Cargo.toml  README.md  task.json
apps/app-desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/app-desktop/src/: main.tsx
apps/app-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/app-desktop/src-tauri/capabilities/: default.json
apps/app-desktop/src-tauri/src/: main.rs
apps/app-desktop/src-tauri/tests/: process_boundary.rs
apps/app-desktop/src/app/: App.tsx
apps/app-desktop/src/app/components/: ConnectionConfig.tsx  FileTransfer.tsx  Settings.tsx  Sidebar.tsx
apps/app-desktop/src/app/lib/: tauri.ts
apps/app-desktop/src/styles/: index.css  theme.css
apps/core-service/: Cargo.toml
apps/core-service/src/: lib.rs  main.rs
apps/core-service/tests/: foundation_integration.rs
crates/core-clipboard/: Cargo.toml
crates/core-clipboard/src/: lib.rs
crates/core-file-transfer/: Cargo.toml
crates/core-file-transfer/src/: lib.rs
crates/core-input/: Cargo.toml
crates/core-input/src/: lib.rs
crates/core-protocol/: Cargo.toml
crates/core-protocol/src/: lib.rs
crates/core-session/: Cargo.toml
crates/core-session/src/: lib.rs
crates/core-topology/: Cargo.toml
crates/core-topology/src/: lib.rs
crates/device-trust/: Cargo.toml
crates/device-trust/src/: lib.rs
crates/foundation/: Cargo.toml
crates/foundation/src/: lib.rs
crates/local-ipc/: Cargo.toml
crates/local-ipc/src/: lib.rs
docs/: architecture.md  background.md  requirements.md  test-plan.md
docs/decisions/: 001-process-and-permission-model.md  002-protocol-and-session-model.md  003-device-discovery.md  004-pairing-and-trust-model.md  005-file-transfer-strategy.md
front/: README.md  index.html  package-lock.json
front/src/app/: App.tsx
front/src/app/components/: ConnectionConfig.tsx  FileTransfer.tsx  Settings.tsx  Sidebar.tsx
scripts/: check_structure.py
