[workspace]
members = [
  "apps/app-desktop/src-tauri",
  "apps/core-service",
  "crates/core-clipboard",
  "crates/core-file-transfer",
  "crates/core-input",
  "crates/core-protocol",
  "crates/core-session",
  "crates/core-topology",
  "crates/device-trust",
  "crates/foundation",
  "crates/local-ipc"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Deskflow-Plus Contributors"]
repository = "https://example.invalid/deskflow-plus"

[workspace.dependencies]
anyhow = "1"
directories = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rcgen = "0.13"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
