[package]
name = "core-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
core-protocol = { path = "../../crates/core-protocol" }
core-session = { path = "../../crates/core-session" }
core-topology = { path = "../../crates/core-topology" }
device-trust = { path = "../../crates/device-trust" }
foundation = { path = "../../crates/foundation" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
local-ipc = { path = "../../crates/local-ipc" }

[dev-dependencies]
serde_json.workspace = true
