[package]
name = "core-session"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
core-protocol = { path = "../core-protocol" }
device-trust = { path = "../device-trust" }
foundation = { path = "../foundation" }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
serde.workspace = true
serde_json.workspace = true
socket2 = "0.6"
tokio.workspace = true
uuid.workspace = true
