[package]
name = "app-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
core-service = { path = "../../core-service" }
core-clipboard = { path = "../../../crates/core-clipboard" }
core-file-transfer = { path = "../../../crates/core-file-transfer" }
core-input = { path = "../../../crates/core-input" }
core-protocol = { path = "../../../crates/core-protocol" }
core-session = { path = "../../../crates/core-session" }
core-topology = { path = "../../../crates/core-topology" }
device-trust = { path = "../../../crates/device-trust" }
foundation = { path = "../../../crates/foundation" }
local-ipc = { path = "../../../crates/local-ipc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }

[dev-dependencies]
